added /api/login for https://github.com/stefanpejcic/openpanel-whmcs-module/issues/7
